[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot for launching the game"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"